--- a/roles and bindings/rolebinding.yaml
+++ b/roles and bindings/rolebinding.yaml
@@ -1,24 +1,11 @@
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
-metadata:
-  namespace: default
-  name: pod-reader
-rules:
-- apiGroups: [""] # "" indicates the core API group
-  resources: ["pods"]
-  verbs: ["get", "watch", "list"]
-  
----
 # This role binding allows "jane" to read pods in the "default" namespace.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: read-pods
-  namespace: default
 subjects:
 - kind: User
-  name: user1 # Name is case sensitive
+  name: jane # Name is case sensitive
   apiGroup: rbac.authorization.k8s.io
 roleRef:
   kind: Role #this must be Role or ClusterRole
