--- a/volumes/pvc-sc-definition.yaml
+++ b/volumes/pvc-sc-definition.yaml
@@ -5,6 +5,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteMany
+  storageClassName: gcp-storage-std
   resources:
     requests:
       storage: 50Mi
